examples/test/testpolicy10492.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10492
  namespace: namespace351
spec:
  podSelector:
    matchLabels:
      key28: value25
      key17: value41
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key1: value23
          key41: value49
          key31: value12
      podSelector:
        matchLabels:
          key42: value0
          key23: value31
          key10: value36
